Sculpting and hair particle edit broken on Wayland #98714

Closed
opened 2022-06-09 09:52:41 +02:00 by Caden Mitchell · 13 comments

System Information
Operating system: Fedora 36 GNOME (on Wayland)
Graphics card: AMD Radeon RX 5700 XT

Blender Version
Broken: 3.3.0 alpha, 38bfa53081, master, 2022-06-09
Worked: 3.3.0 Alpha, e90ba74d3e, master, 2022-06-05

Short description of error
Dragging the tools (like brush or sculpt) will make the mouse behave very strange and makes it basically unusable.

Additionally, using the middle mouse button to orbit or pan will show the mouse cursor moving alongside the 3D vieport and your mouse movement (as is normal). However, upon releasing the middle mouse button, the cursor will snap back to the position it was at before it was pressed.

Notes:
In the "worked" Blender version, using these tools worked, but the mouse would stay stationary while the tool moved independently of the cursor.

In the "worked" Blender version, the cursor behaved differently but also incorrectly. When pressing the middle mouse button to orbit and pan the view, the cursor would remain completely still while the view moved as expected.

Edit:
This is compiled with "WITH_GHOST_WAYLAND=ON" as explained on the building wiki for my OS.

**System Information** Operating system: Fedora 36 GNOME (on Wayland) Graphics card: AMD Radeon RX 5700 XT **Blender Version** Broken: 3.3.0 alpha, 38bfa53081e9, master, 2022-06-09 Worked: 3.3.0 Alpha, e90ba74d3eb8, master, 2022-06-05 **Short description of error** Dragging the tools (like brush or sculpt) will make the mouse behave very strange and makes it basically unusable. Additionally, using the middle mouse button to orbit or pan will show the mouse cursor moving alongside the 3D vieport and your mouse movement (as is normal). However, upon releasing the middle mouse button, the cursor will snap back to the position it was at before it was pressed. **Notes:** In the "worked" Blender version, using these tools worked, but the mouse would stay stationary while the tool moved independently of the cursor. In the "worked" Blender version, the cursor behaved differently but also incorrectly. When pressing the middle mouse button to orbit and pan the view, the cursor would remain completely still while the view moved as expected. **Edit:** This is compiled with "WITH_GHOST_WAYLAND=ON" as explained on the building wiki for my OS.
Author

Added subscriber: @Caden-Mitchell

Added subscriber: @Caden-Mitchell
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

There were three commits in that time related to this:
8b8fbffeea
a1d2efd190
b3e0101a35

So maybe we can ask Campbell to check this. But first, can you attach a video of this behavior?

There were three commits in that time related to this: 8b8fbffeea a1d2efd190 b3e0101a35 So maybe we can ask Campbell to check this. But first, can you attach a video of this behavior?
Author

@OmarEmaraDev Accidentally pulled before checking this thread, putting me at e6548c03f9. The problem still persists. In this video, you will probably notice that trying to particle edit causes my cursor to always jump to the same part of the screen. Same with sculpt and weight paint. Also, the cursor jumps back to its origin when orbiting and panning the view. It also does this in any panels such as the properties panel. Towards the end of the video, you can see me trying to resize the panels in the "Shading" tab. For some reason, I can only move the panel so far down. It seems to be stuck at approximately the same point that particle edit and sculpt mode were getting stuck at.

Screencast from 06-09-2022 03:47:37 PM.webm

Edit: You might need to download the video to see it at full speed. My monitor is 4K, so the video is as well.

@OmarEmaraDev Accidentally pulled before checking this thread, putting me at e6548c03f9f3. The problem still persists. In this video, you will probably notice that trying to particle edit causes my cursor to always jump to the same part of the screen. Same with sculpt and weight paint. Also, the cursor jumps back to its origin when orbiting and panning the view. It also does this in any panels such as the properties panel. Towards the end of the video, you can see me trying to resize the panels in the "Shading" tab. For some reason, I can only move the panel so far down. It seems to be stuck at approximately the same point that particle edit and sculpt mode were getting stuck at. [Screencast from 06-09-2022 03:47:37 PM.webm](https://archive.blender.org/developer/F13142362/Screencast_from_06-09-2022_03_47_37_PM.webm) Edit: You might need to download the video to see it at full speed. My monitor is 4K, so the video is as well.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Here is a low quality and low size version of the video above for quick playback:

waylandCursorIssue.webm

@ideasman42 Seems to have been broken in one of your commits:
8b8fbffeea
a1d2efd190
b3e0101a35
While I can't reproduce myself, can you check?

Here is a low quality and low size version of the video above for quick playback: [waylandCursorIssue.webm](https://archive.blender.org/developer/F13142883/waylandCursorIssue.webm) @ideasman42 Seems to have been broken in one of your commits: 8b8fbffeea a1d2efd190 b3e0101a35 While I can't reproduce myself, can you check?

Note that Wayland doesn't allow the client (Blender) to move the cursor, the only options are:

  • lock the cursor to a fixed position.
  • constrain it to a region.
  • no locking.

So whatever behavior we choose will need to be compatible with that.

It probably makes sense to disable cursor-locking for painting as moving the mouse outside the view isn't all that useful (unlike some other cases such as panning the view or transform).

Orbiting the view (for e.g.) it's not so obvious what the ideal behavior would be - given these constraints. I'll check with others in the UI team.

Note that Wayland doesn't allow the client (Blender) to move the cursor, the only options are: - lock the cursor to a fixed position. - constrain it to a region. - no locking. So whatever behavior we choose will need to be compatible with that. It probably makes sense to disable cursor-locking for painting as moving the mouse outside the view isn't all that useful (unlike some other cases such as panning the view or transform). Orbiting the view (for e.g.) it's not so obvious what the ideal behavior would be - given these constraints. I'll check with others in the UI team.
Campbell Barton self-assigned this 2022-06-10 12:22:28 +02:00
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

@Caden-Mitchell the issue with resize being clamped to half-way down the window looks to be a bug in gnome-shell as it doesn't happen in KDE (I didn't check if they know about this or not, just that it's spesific to gnome-shell).

Could you make separate reports for these issues? It's impractical to track multiple issues in one report.

@Caden-Mitchell the issue with resize being clamped to half-way down the window looks to be a bug in gnome-shell as it doesn't happen in KDE (I didn't check if they know about this or not, just that it's spesific to gnome-shell). Could you make separate reports for these issues? It's impractical to track multiple issues in one report.

This issue was referenced by 37097ae62a

This issue was referenced by 37097ae62a9c13fca81f3fb6d1342057b2f17763

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98714
No description provided.