Fix T98714: Cursor grab restores to the initial location in Wayland

While Wayland can't warp the cursor, it can set a hint for the cursor
restore location when removing the lock.